# NaN-Crew-Datathon-2025-OXXO

./: .gitattributes  .gitignore  1_Creacion_Variable_Objetivo.ipynb  2_Exploracion_Shapefile_AGEB.ipynb  3_Procesamiento_Censo_Union_Geoespacial.ipynb  4_Procesar_Catalogo_SCIAN.ipynb  5_Integracion_DENUE.ipynb  6_Integracion_OSM.ipynb  7_Integracion_IMU.ipynb  7b_Test_Data.ipynb  7c_Oficial_Test.ipynb  8_Preprocesamiento.ipynb  9_Modelado.ipynb  LICENSE  README.md  main.py  pyproject.toml
